Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/Approval_Framework_Config__c.object-meta.xml
<CustomObject>
    <label>Approval Framework Config</label>
    <nameField>
        <label>Approval Framework Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Framework Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>