Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DiscountApproval</fullName>
                <label>Discount Approval</label>
            </value>
            <value>
                <fullName>TermsApproval</fullName>
                <label>Terms Approval</label>
            </value>
            <value>
                <fullName>ProductApproval</fullName>
                <isActive>false</isActive>
                <label>Product Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>