Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <label>Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
                <isActive>false</isActive>
                <label>Role</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>