Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Approver_Value__c.field-meta.xml
<CustomField>
    <fullName>Approver_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Value</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Framework_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>