Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/AR_ApprovalStatusMonitor__c.field-meta.xml
<CustomField>
    <fullName>AR_ApprovalStatusMonitor__c</fullName>
    <label>Approval Status Monitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>