Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Condition_Met__c.field-meta.xml
<CustomField>
    <fullName>Condition_Met__c</fullName>
    <label>Condition Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>