Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Field__c</fullName>
    <label>Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>