Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Criteria_Operator__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Operator__c</fullName>
    <label>Criteria Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>