Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Criteria_Value__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value__c</fullName>
    <label>Criteria Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>