Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Depends_On_Level__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Level__c</fullName>
    <label>Depends On Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>