Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Evaluation_Condition__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Condition__c</fullName>
    <label>Evaluation Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>