Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/is_Last_Level__c.field-meta.xml
<CustomField>
    <fullName>is_Last_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Last Level</label>
    <type>Checkbox</type>
</CustomField>