Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/isOptional__c.field-meta.xml
<CustomField>
    <fullName>isOptional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOptional</label>
    <type>Checkbox</type>
</CustomField>