Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/isSequencing__c.field-meta.xml
<CustomField>
    <fullName>isSequencing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSequencing</label>
    <type>Checkbox</type>
</CustomField>