Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Level_Number__c.field-meta.xml
<CustomField>
    <fullName>Level_Number__c</fullName>
    <label>Level Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>