Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>