Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/fields/sourceField__c.field-meta.xml
<CustomField>
    <fullName>sourceField__c</fullName>
    <label>sourceField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>