Advance Approval/force-app/main/default/objects/Approval_Framework_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Level_Number__c</columns>
    <columns>Approval_Type__c</columns>
    <columns>Approver_Value__c</columns>
    <columns>Depends_On_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>